ad management , privacy policy, terms of service, feedback api completed
