# bovpn-backend/routes/feedbackRoutes.js
@@ -1,0 +1,7 @@
+const express = require("express");
+const { submitFeedback } = require("../controllers/feedbackController");
+
+const router = express.Router();
+router.post("/", submitFeedback);
+
+module.exports = router;
