# bovpn-backend/routes/privacyPolicyRoutes.js
@@ -1,0 +1,7 @@
+const express = require("express");
+const { getPrivacyPolicy } = require("../controllers/privacyPolicyController");
+
+const router = express.Router();
+router.get("/", getPrivacyPolicy);
+
+module.exports = router;
